--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,4 +1,4 @@
- <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,28 +8,76 @@ android:layout_height="match_parent"
 android:orientation="vertical"
 tools:context=".MainActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="290dp"
+
+    <TextView
+        android:id="@+id/judul_login"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:boxStrokeColor="#121212"
-        app:boxStrokeErrorColor="@color/red"
-        app:boxStrokeWidth="2dp"
-        app:hintTextColor="#121212"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="LOGIN"
+        android:fontFamily="@font/poppins_bold"
+        android:textSize="40sp"
+        android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_email"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Email"
+        app:helperTextTextColor="@color/red"
+        app:startIconDrawable="@drawable/nama_pengguna"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/judul_login">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_password"
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_mediumitalic"
-            android:hint="Masukkan Password"
-            android:inputType="textPassword"/>
-
+            android:lines="1"/>
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_kata_sandi"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Kata Sandi"
+        android:layout_marginTop="30dp"
+        app:passwordToggleEnabled="true"
+        app:helperTextTextColor="@color/red"
+        app:startIconDrawable="@drawable/kata_sandi"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_email">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_kata_sandi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@id/til_nama_pengguna"
+        app:layout_constraintStart_toStartOf="@id/til_nama_pengguna"/>
+
+    <ImageView
+        android:id="@+id/logo_aplikasi"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="50dp"
+        app:srcCompat="@drawable/group_111"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
