--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#121212</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#DD5353</color>
+    <color name="grey">#D9D9D9</color>
 </resources>
