--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -8,12 +8,11 @@ android:layout_height="match_parent"
 android:orientation="vertical"
 tools:context=".MainActivity">
 
-
     <TextView
-        android:id="@+id/judul_login"
+        android:id="@+id/judul_masuk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOGIN"
+        android:text="MASUK"
         android:fontFamily="@font/poppins_bold"
         android:textSize="40sp"
         android:layout_marginTop="50dp"
@@ -27,10 +26,10 @@ tools:context=".MainActivity">
         android:layout_height="wrap_content"
         android:hint="Masukkan Email"
         app:helperTextTextColor="@color/red"
-        app:startIconDrawable="@drawable/nama_pengguna"
+        app:startIconDrawable="@drawable/mail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/judul_login">
+        app:layout_constraintTop_toBottomOf="@id/judul_masuk">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email"
@@ -47,6 +46,8 @@ tools:context=".MainActivity">
         android:layout_marginTop="30dp"
         app:passwordToggleEnabled="true"
         app:helperTextTextColor="@color/red"
+        app:counterMaxLength="16"
+        app:counterEnabled="true"
         app:startIconDrawable="@drawable/kata_sandi"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,12 +62,42 @@ tools:context=".MainActivity">
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_masuk"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:text="MASUK"
+        android:textSize="20sp"
+        android:fontFamily="@font/poppins_bold"
+        android:background="@drawable/background_tombol"
+        android:layout_marginTop="20sp"
+        app:layout_constraintEnd_toEndOf="@id/til_kata_sandi"
+        app:layout_constraintTop_toBottomOf="@id/til_kata_sandi"
+        app:layout_constraintStart_toStartOf="@id/til_kata_sandi"/>
+
+    <TextView
+        android:id="@+id/belum_punya_akun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintTop_toBottomOf="@id/til_nama_pengguna"
-        app:layout_constraintStart_toStartOf="@id/til_nama_pengguna"/>
+        android:text="Belum punya akun ?"
+        android:textSize="12sp"
+        android:fontFamily="@font/poppins_lightitalic"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="105dp"
+        app:layout_constraintStart_toStartOf="@id/button_masuk"
+        app:layout_constraintTop_toBottomOf="@id/button_masuk"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Daftar"
+        android:textSize="12sp"
+        android:fontFamily="@font/poppins_bolditalic"
+        android:textColor="@color/red"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintStart_toEndOf="@id/belum_punya_akun"
+        app:layout_constraintTop_toBottomOf="@id/button_masuk"/>
 
     <ImageView
         android:id="@+id/logo_aplikasi"
@@ -77,7 +108,5 @@ tools:context=".MainActivity">
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
