--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -6,172 +6,145 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/frame_37"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:id="@+id/scroll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <TextView
+        android:id="@+id/judul_daftar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DAFTAR"
+        android:fontFamily="@font/poppins_bold"
+        android:textSize="40sp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <LinearLayout
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_email"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Email"
+        app:helperTextTextColor="@color/red"
+        app:startIconDrawable="@drawable/mail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/judul_daftar">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:lines="1"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="411dp"
-                android:layout_height="730dp">
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_nama_pengguna"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Nama Pengguna"
+        android:layout_marginTop="30dp"
+        app:helperTextTextColor="@color/red"
+        app:startIconDrawable="@drawable/nama_pengguna"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_email">
 
-                <TextView
-                    android:id="@+id/judul_daftar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="DAFTAR"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textColor="@color/black"
-                    android:layout_marginBottom="20dp"
-                    app:layout_constraintBottom_toTopOf="@id/background_putih"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:textSize="30dp"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_nama_pengguna"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/judul_aplikasi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tri Mapps"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textColor="@color/black"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintTop_toBottomOf="@id/background_putih"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:textSize="30dp"/>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_github"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Akun Github"
+        android:layout_marginTop="30dp"
+        app:helperTextTextColor="@color/red"
+        app:startIconDrawable="@drawable/github"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_nama_pengguna">
 
-                <ImageView
-                    android:id="@+id/background_putih"
-                    android:layout_width="370dp"
-                    android:layout_height="500dp"
-                    android:src="@drawable/shadow"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_github"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/til_email"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="290dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="60dp"
-                    app:boxStrokeColor="#121212"
-                    app:boxStrokeErrorColor="@color/red"
-                    app:boxStrokeWidth="2dp"
-                    app:hintTextColor="#121212"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/judul_daftar">
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_kata_sandi"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Kata Sandi"
+        android:layout_marginTop="30dp"
+        app:passwordToggleEnabled="true"
+        app:helperTextTextColor="@color/red"
+        app:counterMaxLength="16"
+        app:counterEnabled="true"
+        app:startIconDrawable="@drawable/kata_sandi"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_github">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_mediumitalic"
-                        android:hint="Masukkan Email" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_kata_sandi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-                </com.google.android.material.textfield.TextInputLayout>
+    <Button
+        android:id="@+id/button_masuk"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:text="DAFTAR"
+        android:textSize="20sp"
+        android:fontFamily="@font/poppins_bold"
+        android:background="@drawable/background_tombol"
+        android:layout_marginTop="20sp"
+        app:layout_constraintEnd_toEndOf="@id/til_kata_sandi"
+        app:layout_constraintTop_toBottomOf="@id/til_kata_sandi"
+        app:layout_constraintStart_toStartOf="@id/til_kata_sandi"/>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/til_nama_pengguna"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="290dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    app:boxStrokeColor="#121212"
-                    app:boxStrokeErrorColor="@color/red"
-                    app:boxStrokeWidth="2dp"
-                    app:hintTextColor="#121212"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/til_email">
+    <TextView
+        android:id="@+id/sudah_punya_akun"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sudah punya akun ?"
+        android:textSize="12sp"
+        android:fontFamily="@font/poppins_lightitalic"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="100dp"
+        app:layout_constraintStart_toStartOf="@id/button_masuk"
+        app:layout_constraintTop_toBottomOf="@id/button_masuk"/>
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_nama_pengguna"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_mediumitalic"
-                        android:hint="Masukkan Nama Pengguna"
-                        android:inputType="textPassword"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Masuk"
+        android:textSize="12sp"
+        android:fontFamily="@font/poppins_bolditalic"
+        android:textColor="@color/red"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintStart_toEndOf="@id/sudah_punya_akun"
+        app:layout_constraintTop_toBottomOf="@id/button_masuk"/>
 
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/til_nama_github"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="290dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    app:boxStrokeColor="#121212"
-                    app:boxStrokeErrorColor="@color/red"
-                    app:boxStrokeWidth="2dp"
-                    app:hintTextColor="#121212"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/til_nama_pengguna">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_nama_github"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_mediumitalic"
-                        android:hint="Masukkan Akun Github"
-                        android:inputType="textPassword"/>
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/til_kata_sandi"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="290dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    app:boxStrokeColor="#121212"
-                    app:boxStrokeErrorColor="@color/red"
-                    app:boxStrokeWidth="2dp"
-                    app:hintTextColor="#121212"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/til_nama_github">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_kata_sandi"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_mediumitalic"
-                        android:hint="Masukkan Kata Sandi"
-                        android:inputType="textPassword"/>
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/button"
-                    android:layout_width="290dp"
-                    android:layout_height="wrap_content"
-                    android:text="Button"
-                    style="@style/bg_tombol"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/til_kata_sandi"/>
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    <ImageView
+        android:id="@+id/logo_aplikasi"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="50dp"
+        app:srcCompat="@drawable/group_111"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
