--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -12,7 +12,7 @@
         android:id="@+id/judul_daftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DAFTAR"
+        android:text="DAFTARi"
         android:fontFamily="@font/poppins_bold"
         android:textSize="40sp"
         android:layout_marginTop="50dp"
