--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#DD5353</color>
     <color name="grey">#D9D9D9</color>
+    <color name="coklat">#D3d3d3</color>
+    <color name="abuabu">#808080</color>
+
 </resources>
