--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -35,6 +35,7 @@
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             android:lines="1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,6 +55,7 @@
             android:id="@+id/et_nama_pengguna"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="text"
             android:lines="1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,6 +75,7 @@
             android:id="@+id/et_github"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="text"
             android:lines="1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,7 +103,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button_masuk"
+        android:id="@+id/button_daftar"
         android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:text="DAFTAR"
@@ -122,10 +125,11 @@
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:layout_marginStart="100dp"
-        app:layout_constraintStart_toStartOf="@id/button_masuk"
-        app:layout_constraintTop_toBottomOf="@id/button_masuk"/>
+        app:layout_constraintStart_toStartOf="@id/button_daftar"
+        app:layout_constraintTop_toBottomOf="@id/button_daftar"/>
 
     <TextView
+        android:id="@+id/masuk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Masuk"
@@ -135,7 +139,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
         app:layout_constraintStart_toEndOf="@id/sudah_punya_akun"
-        app:layout_constraintTop_toBottomOf="@id/button_masuk"/>
+        app:layout_constraintTop_toBottomOf="@id/button_daftar"/>
 
     <ImageView
         android:id="@+id/logo_aplikasi"
