update layout home dan profile

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,28 +23,16 @@
 
             <ImageView
                 android:id="@+id/profile_picture"
-                android:layout_width="125dp"
-                android:layout_height="125dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="center"
                 android:layout_marginTop="36dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/group_111" />
-
-            <TextView
-                android:id="@+id/textProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="4dp"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                tools:text="Profil Anda"/>
-
-
+                android:src="@drawable/hilmy" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button"
+                android:id="@+id/nama_pengguna"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="32dp"
@@ -52,86 +40,91 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/bn_background"
-                android:drawableStart="@drawable/baseline_account_circle_24"
+                android:drawableStart="@drawable/nama_pengguna"
+                android:drawableTint="@color/black"
                 android:drawablePadding="20dp"
                 android:paddingStart="20dp"
                 android:text="Muhammad Khilmi"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_medium"
                 style="@android:style/Widget.Button"
                 android:textAlignment="viewStart" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button3"
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_medium"
                 style="@android:style/Widget.Button"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/bn_background"
-                android:drawableStart="@drawable/baseline_email_24"
+                android:drawableStart="@drawable/mail"
+                android:drawableTint="@color/black"
                 android:drawablePadding="20dp"
                 android:paddingStart="20dp"
                 android:text="khilmi23@gmail.com"
                 android:textAlignment="viewStart" />
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button4"
+                android:id="@+id/github"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="10dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_medium"
                 style="@android:style/Widget.Button"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/bn_background"
-                android:drawableStart="@drawable/baseline_lock_24"
+                android:drawableStart="@drawable/github"
+                android:drawableTint="@color/black"
                 android:paddingStart="20dp"
                 android:text="KhilmiGakpakeE"
-                android:drawablePadding="10dp"
+                android:drawablePadding="20dp"
                 android:textAlignment="viewStart" />
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button5"
+                android:id="@+id/kata_sandi"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_medium"
                 style="@android:style/Widget.Button"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/bn_background"
-                android:drawableStart="@drawable/baseline_lock_24"
+                android:drawableStart="@drawable/kata_sandi"
+                android:drawableTint="@color/black"
                 android:drawablePadding="20dp"
                 android:paddingStart="20dp"
                 android:text="TifC22"
                 android:textAlignment="viewStart" />
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button6"
+                android:id="@+id/pengaturan"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_medium"
                 style="@android:style/Widget.Button"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/bn_background"
-                android:drawableStart="@drawable/baseline_settings_24"
+                android:drawableStart="@drawable/pengaturan"
+                android:drawableTint="@color/black"
                 android:drawablePadding="20dp"
                 android:paddingStart="20dp"
                 android:text="Pengaturan"
                 android:textAlignment="viewStart" />
 
             <Button
-                android:id="@+id/btn_1"
+                android:id="@+id/keluar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
