--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,13 +9,23 @@ tools:context=".MainActivity">
 
 
     <ImageView
-        android:id="@+id/img1"
-        android:layout_width="375dp"
+        android:id="@+id/logo"
+        android:layout_width="90dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/group_111"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/tri"
+        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/profil"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/hilmy"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.SearchView
@@ -23,13 +33,13 @@ tools:context=".MainActivity">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/seacrhview"
+        android:background="@drawable/background_tombol2"
         app:iconifiedByDefault="false"
         app:layout_constraintBottom_toTopOf="@+id/recycleViewer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img1"
+        app:layout_constraintTop_toBottomOf="@id/logo"
         app:queryHint="cari disini..." />
 
     <androidx.recyclerview.widget.RecyclerView
