--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+  <FrameLayout
+      android:id="@+id/fl_wrapper"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_above="@+id/meowBottomNavigation"/>
+
   <com.etebarian.meowbottomnavigation.MeowBottomNavigation
       android:id="@+id/meowBottomNavigation"
       android:layout_width="match_parent"
@@ -20,52 +26,5 @@
       app:mbn_shadowColor="#1f212121"
       />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:startIconDrawable="@drawable/nama_pengguna"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-      <com.google.android.material.textfield.TextInputEditText
-          android:id="@+id/et_password"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:fontFamily="@font/poppins_mediumitalic"
-          android:hint="Masukkan Nama Pengguna"
-          android:inputType="textPassword"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-  <EditText
-      android:layout_width="match_parent"
-      android:layout_height="60dp"
-      android:layout_below="@+id/til_password"
-      android:layout_marginTop="19dp"
-      android:hint="@string/app_name"
-      android:inputType="textPassword"
-      android:textSize="14sp"/>
-
-  <!--ini bisa dihapus sama menu dan nav menunya-->
-  <FrameLayout
-      android:id="@+id/fl_wrapper"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_above="@+id/bottom_navigation"/>
-
-  <com.google.android.material.bottomnavigation.BottomNavigationView
-      android:id="@+id/bottom_navigation"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
-      android:background="?android:attr/windowBackground"
-      app:itemBackground="@color/coklat"
-      app:itemIconTint="#fff"
-      app:itemTextColor="#fff"
-      app:menu="@menu/nav_menu"/>
-  <!--sampek sini atau kode ini bisa dipindahkan ke home-->
 </RelativeLayout>
