--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-  <FrameLayout
-      android:id="@+id/fl_wrapper"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_above="@+id/meowBottomNavigation"/>
+  <fragment
+      android:id="@+id/main_container"
+      android:name="androidx.navigation.fragment.NavHostFragment"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:defaultNavHost="true"
+      app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.5"
+      app:navGraph="@navigation/mobile_navigation" />
 
-  <com.etebarian.meowbottomnavigation.MeowBottomNavigation
-      android:id="@+id/meowBottomNavigation"
-      android:layout_width="match_parent"
+  <com.google.android.material.bottomnavigation.BottomNavigationView
+      android:id="@+id/bottomNavigationView"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
-      app:mbn_circleColor="#DD5353"
-      app:mbn_backgroundBottomColor="#ffffff"
-      app:mbn_countTextColor="#ffffff"
-      app:mbn_defaultIconColor="#DD5353"
-      app:mbn_rippleColor="#2f424242"
-      app:mbn_selectedIconColor="#ffffff"
-      app:mbn_shadowColor="#1f212121"
-      />
+      android:background="@color/white"
+      app:menu="@menu/nav_menu"
+      app:itemIconTint="@color/black"
+      app:itemTextColor="@color/black"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
