--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -104,6 +105,7 @@
                 android:paddingStart="20dp"
                 android:text="TifC22"
                 android:textAlignment="viewStart" />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/pengaturan"
                 android:layout_width="match_parent"
