--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,17 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/ic_home"
+        android:id="@+id/navigation_home"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home"/>
+        android:title="@string/title_home" />
 
     <item
-        android:id="@+id/ic_favorite"
+        android:id="@+id/navigation_favorite"
         android:icon="@drawable/baseline_favorite_24"
-        android:title="favorite"/>
+        android:title="@string/title_favorit" />
 
     <item
-        android:id="@+id/profil"
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
-        android:title="profile"/>
+        android:title="@string/title_profile" />
+
 </menu>
