--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,13 @@
     <color name="grey">#D9D9D9</color>
     <color name="coklat">#D3d3d3</color>
     <color name="abuabu">#808080</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+    <color name="pink">#F06292</color>
+    <color name="navi">#2D3D4F</color>
 
 </resources>
